# FanTune

./: .gitignore  CMakeLists.txt  LICENSE  README.md
fantune-gui/: CMakeLists.txt
fantune-gui/src/: Fan.h  FanRow.h  FansScrollArea.cpp  FansScrollArea.h  PlotPoint.cpp  PlotPoint.h  fanpreview.cpp  fanpreview.h  fanpreview.ui  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingswidget.cpp  settingswidget.h  settingswidget.ui  tabwidget.cpp  tabwidget.ui
fantuned/: CMakeLists.txt
fantuned/src/: main.cpp
libfantune/: CMakeLists.txt
libfantune/includes/: ControlCurve.h  Fan.h  FanCurve.h  FanSelector.h  FanTest.h
libfantune/src/: ControlCurve.cpp  Fan.cpp  FanCurve.cpp  FanSelector.cpp  FanTest.cpp
